# P-ADO

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
analysis/: README.md  YAll_transition_results.ipynb  YAnalysis.py  YAnalysis_singular.py  YExtract.ipynb  YExtract_singular.ipynb  YPlot.py  YPlot_singular.py  draw_pado_single.py
p_ado/: README.md  config.py  main.py  path_display.py  runtime_report.py
p_ado/compute/: grid.py  jacobian.py  parallel.py  solver.py
p_ado/io/: io.py
p_ado/pdf/: evaluators.py  fitters.py  models.py
p_ado/physics/: delta.py  pado.py  sigmaOverI.py
tests/: test_output.py  test_pdf.py  test_physics.py  test_reporting.py  test_solver.py
